--- a/src/main/resources/templates/pages/master/kurikulum/index.html
+++ b/src/main/resources/templates/pages/master/kurikulum/index.html
@@ -34,6 +34,7 @@
                         <th>No</th>
                         <th>Kode</th>
                         <th>Nama</th>
+                        <th>No Urut</th>
                         <th>Status</th>
                         <th class="cell-fit">Actions</th>
                     </tr>
