--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -98,7 +98,7 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/ekskul}" class="menu-link" target="_blank">
-                        <div data-i18n="Ektra Kurikuler">Ektra Kurikuler</div>
+                        <div data-i18n="Ekstra Kurikuler">Ekstra Kurikuler</div>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -108,7 +108,7 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/level}" class="menu-link">
-                        <div data-i18n="Level">Level</div>
+                        <div data-i18n="Master Level">Master Level</div>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -118,7 +118,7 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/ruangan}" class="menu-link">
-                        <div data-i18n="Ruangan">Ruangan</div>
+                        <div data-i18n="Master Ruangan">Master Ruangan</div>
                     </a>
                 </li>
                 <li class="menu-item">
@@ -128,12 +128,12 @@
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/sesi}" class="menu-link">
-                        <div data-i18n="Sesi">Sesi</div>
+                        <div data-i18n="Master Sesi">Sesi</div>
                     </a>
                 </li>
                 <li class="menu-item">
                     <a th:href="@{~/master/kurikulum}" class="menu-link">
-                        <div data-i18n="Kurikulum">Master Kurikulum</div>
+                        <div data-i18n="Master Kurikulum">Master Kurikulum</div>
                     </a>
                 </li>
                 <li class="menu-item">
