--- a/src/main/resources/templates/pages/master/gedung/edit.html
+++ b/src/main/resources/templates/pages/master/gedung/edit.html
@@ -7,23 +7,27 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">
-                <ul>
-                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-                </ul>
-            </div>
+<!--            <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">-->
+<!--                <ul>-->
+<!--                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />-->
+<!--                </ul>-->
+<!--            </div>-->
             <div class="row">
                 <div class="col mb-3">
                     <label for="kode" class="form-label">Kode</label>
-                    <input type="text" id="kode" name="kode" th:value="${gedung.kode}"
-                           th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" readonly />
+                    <input type="text" id="kode" name="kode" th:value="${gedung.kode}" th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="Kode" />
+                    <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
+                        <span th:errors="*{kode}"></span>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
                     <label for="nama" class="form-label">Nama</label>
-                    <input type="text" id="nama" name="nama" th:value="${gedung.nama}"
-                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" />
+                    <input type="text" id="nama" name="nama" th:value="${gedung.nama}" th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama" />
+                    <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
+                        <span th:errors="*{nama}"></span>
+                    </div>
                 </div>
             </div>
         </div>
