--- a/src/main/resources/templates/pages/master/kurikulum/add.html
+++ b/src/main/resources/templates/pages/master/kurikulum/add.html
@@ -6,11 +6,11 @@
       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-      <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">
-        <ul>
-          <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-        </ul>
-      </div>
+<!--      <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">-->
+<!--        <ul>-->
+<!--          <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />-->
+<!--        </ul>-->
+<!--      </div>-->
       <div class="row">
         <div class="col mb-3">
           <label for="kode" class="form-label">Kode</label>
@@ -29,6 +29,15 @@
           </div>
         </div>
       </div>
+        <div class="row">
+            <div class="col mb-3">
+                <label for="noUrut" class="form-label">No Urut</label>
+                <input type="text" id="noUrut" name="noUrut" th:value="${kurikulum.noUrut}" th:class="${#fields.hasErrors('noUrut')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
+                <div th:if="${#fields.hasErrors('noUrut')}" class="invalid-feedback">
+                    <span th:errors="*{noUrut}"></span>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- footer -->
     <div class="modal-footer input-group">
