--- a/src/main/resources/templates/pages/master/kurikulum/edit.html
+++ b/src/main/resources/templates/pages/master/kurikulum/edit.html
@@ -7,23 +7,39 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">
-                <ul>
-                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-                </ul>
-            </div>
+<!--            <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger errors" role="alert">-->
+<!--                <ul>-->
+<!--                    <li th:each="err : ${#fields.allErrors()}" th:text="${err}" />-->
+<!--                </ul>-->
+<!--            </div>-->
             <div class="row">
                 <div class="col mb-3">
                     <label for="kode" class="form-label">Kode</label>
                     <input type="text" id="kode" name="kode" th:value="${kurikulum.kode}"
-                           th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" readonly />
+                           th:class="${#fields.hasErrors('kode')}? 'form-control is-invalid': 'form-control'" placeholder="Kode"/>
+                    <div th:if="${#fields.hasErrors('kode')}" class="invalid-feedback">
+                        <span th:errors="*{kode}"></span>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
                     <label for="nama" class="form-label">Nama</label>
                     <input type="text" id="nama" name="nama" th:value="${kurikulum.nama}"
-                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" />
+                           th:class="${#fields.hasErrors('nama')}? 'form-control is-invalid': 'form-control'" placeholder="Nama"/>
+                    <div th:if="${#fields.hasErrors('nama')}" class="invalid-feedback">
+                        <span th:errors="*{nama}"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="noUrut" class="form-label">No Urut</label>
+                    <input type="text" id="noUrut" name="noUrut" th:value="${kurikulum.noUrut}"
+                           th:class="${#fields.hasErrors('noUrut')}? 'form-control is-invalid': 'form-control'" placeholder="No Urut" />
+                    <div th:if="${#fields.hasErrors('noUrut')}" class="invalid-feedback">
+                        <span th:errors="*{noUrut}"></span>
+                    </div>
                 </div>
             </div>
         </div>
