--- a/src/main/resources/templates/pages/master/person/delete.html
+++ b/src/main/resources/templates/pages/master/person/delete.html
@@ -41,7 +41,7 @@
                     <input type="text" id="tempatLahir" name="tempatLahir" th:value="${person.tempatLahir}" class="form-control" readonly/>
                 </div>
                 <div class="col mb-3">
-                    <label for="gender" class="form-label">Jenis Kelamin</label>
+                    <label for="gender" class="form-label">Gender</label>
                     <input type="text" id="gender" name="gender" th:value="${person.gender}" class="form-control" readonly />
                 </div>
                 <div class="col mb-3">
