--- a/src/main/resources/templates/pages/master/person/index.html
+++ b/src/main/resources/templates/pages/master/person/index.html
@@ -37,7 +37,7 @@
                         <th>NIK</th>
                         <th>Tanggal Lahir</th>
                         <th>Tempat Lahir</th>
-                        <th>Jenis Kelamin</th>
+                        <th>Gender</th>
                         <th>Agama</th>
                         <th>Gol-Darah</th>
                         <th>No-Telp</th>
