feat: add header

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -410,7 +410,7 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-end">
           <li>
-            <a class="dropdown-item" href="pages-account-settings-account.html">
+            <a class="dropdown-item" th:href="@{~/users}">
               <div class="d-flex">
                 <div class="flex-shrink-0 me-3">
                   <div class="avatar avatar-online">
@@ -428,7 +428,7 @@
             <div class="dropdown-divider"></div>
           </li>
           <li>
-            <a class="dropdown-item" href="pages-profile-user.html">
+            <a class="dropdown-item" th:href="@{~/users}">
               <i class="ti ti-user-check me-2 ti-sm"></i>
               <span class="align-middle">My Profile</span>
             </a>
@@ -448,27 +448,6 @@
                           >2</span
                           >
                         </span>
-            </a>
-          </li>
-          <li>
-            <div class="dropdown-divider"></div>
-          </li>
-          <li>
-            <a class="dropdown-item" href="pages-help-center-landing.html">
-              <i class="ti ti-lifebuoy me-2 ti-sm"></i>
-              <span class="align-middle">Help</span>
-            </a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="pages-faq.html">
-              <i class="ti ti-help me-2 ti-sm"></i>
-              <span class="align-middle">FAQ</span>
-            </a>
-          </li>
-          <li>
-            <a class="dropdown-item" href="pages-pricing.html">
-              <i class="ti ti-currency-dollar me-2 ti-sm"></i>
-              <span class="align-middle">Pricing</span>
             </a>
           </li>
           <li>
