feat: update dashboard

--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -44,6 +44,7 @@
 
   <!-- Page CSS -->
   <link rel="stylesheet" th:href="@{~/vendor/css/pages/cards-advance.css}" />
+  <th:block layout:fragment="pageCss"></th:block>
   <!-- Helpers -->
   <script th:src="@{~/vendor/js/helpers.js}"></script>
 
