--- a/src/main/resources/templates/pages/error/modal-500.html
+++ b/src/main/resources/templates/pages/error/modal-500.html
@@ -4,10 +4,10 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        <div class="alert alert-warning alert-dismissible d-flex align-items-baseline" role="alert">
-                    <span class="alert-icon alert-icon-lg text-primary me-2">
-                      <i class="ti ti-user ti-sm"></i>
-                    </span>
+        <div class="alert alert-danger alert-dismissible d-flex align-items-baseline" role="alert">
+            <span class="alert-icon alert-icon-lg text-primary me-2">
+              <i class="ti ti-user ti-sm"></i>
+            </span>
             <div class="d-flex flex-column ps-1 error-content">
                 <h5 class="headline text-danger">500</h5>
                 <p class="mb-0">
@@ -16,7 +16,6 @@
                 <p>
                     We will work on fixing that right away.
                 </p>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         </div>
     </div>
