--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -48,13 +48,13 @@
                 <div data-i18n="Dashboards">Dashboards</div>
                 <div class="badge bg-label-primary rounded-pill ms-auto">3</div>
             </a>
-            <!--
             <ul class="menu-sub">
                 <li class="menu-item active">
-                    <a href="index.html" class="menu-link">
-                        <div data-i18n="Analytics">Analytics</div>
+                    <a th:href="@{~/classroom}" class="menu-link">
+                        <div data-i18n="Classroom">Classroom</div>
                     </a>
                 </li>
+                <!--
                 <li class="menu-item">
                     <a href="dashboards-crm.html" class="menu-link">
                         <div data-i18n="CRM">CRM</div>
@@ -65,8 +65,8 @@
                         <div data-i18n="eCommerce">eCommerce</div>
                     </a>
                 </li>
+                -->
             </ul>
-            -->
         </li>
         <!-- ATK -->
         <li class="menu-item">
