--- a/src/main/resources/templates/pages/classroom/index.html
+++ b/src/main/resources/templates/pages/classroom/index.html
@@ -11,14 +11,69 @@
 <body>
 <div class="container-xxl flex-grow-1 container-p-y" layout:fragment="content">
     <h4 class="py-3 mb-4"><span class="text-muted fw-light">Classroom /</span> Profile</h4>
+
+    <div class="col-lg-3 col-sm-6 col-12">
+        <div class="btn-group" id="dropdown-icon">
+            <button
+                    type="button"
+                    class="btn btn-primary dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                <i class="ti ti-plus"></i> &nbsp; Create
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a href="#" class="dropdown-item d-flex align-content-lg-between">
+                        <i class="fa-regular fa-clipboard"></i> &nbsp; Assignment
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="dropdown-item d-flex align-items-center">
+                        <i class="fa-solid fa-clipboard"></i> &nbsp; Quiz Assignment
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        <i class="fa-solid fa-clipboard-question"></i> &nbsp; Quiz
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        <i class="fa-solid fa-book-bookmark"></i> &nbsp; Material
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        <i class="fa-solid fa-repeat"></i> &nbsp; Reuse Post
+                    </a>
+                </li>
+                <li>
+                    <a id="btn-add" th:href="@{~/classroom/topic/add}" class="dropdown-item d-flex align-items-center">
+                        <i class="fa-solid fa-table-list"></i> &nbsp; Topic
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!-- url link -->
+    <nav class="navbar navbar-example navbar-expand-lg bg-white" style="z-index: 20">
+        <div class="container-fluid">
+            <div class="nav-align-left ">
+                <a class="navbar-brand" href="#">Stream</a>
+                <a class="navbar-brand" href="#">Classwork</a>
+                <a class="navbar-brand" href="#">People</a>
+                <a class="navbar-brand" href="#">Grades</a>
+            </div>
+        </div>
+    </nav>
     <input type="hidden" id="classroom-item-url" th:href="@{~/classroom/items}">
     <div class="app-academy">
         <div class="card mb-4">
             <div class="card-header d-flex flex-wrap justify-content-between gap-3">
                 <div class="card-title mb-0 me-1">
-                    <h5 class="mb-1">My Courses</h5>
+                    <h5 class="card-title mb-1" id="level-title">My Courses</h5>
                     <p class="text-muted mb-0">Total 6 course you have purchased</p>
+
                 </div>
                 <div class="d-flex justify-content-md-end align-items-center gap-3 flex-wrap">
                     <select id="select2_course_select" class="select2 form-select" data-placeholder="All Courses">
