--- a/src/main/resources/templates/pages/classroom/index.html
+++ b/src/main/resources/templates/pages/classroom/index.html
@@ -10,92 +10,80 @@
 </head>
 <body>
 <div class="container-xxl flex-grow-1 container-p-y" layout:fragment="content">
+    <!--breadcrumb -->
     <h4 class="py-3 mb-4"><span class="text-muted fw-light">Classroom /</span> Profile</h4>
+    <!-- end breadcrumb -->
 
-    <div class="col-lg-3 col-sm-6 col-12">
-        <div class="btn-group" id="dropdown-icon">
-            <button
-                    type="button"
-                    class="btn btn-primary dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                <i class="ti ti-plus"></i> &nbsp; Create
-            </button>
-            <ul class="dropdown-menu">
-                <li>
-                    <a href="#" class="dropdown-item d-flex align-content-lg-between">
-                        <i class="fa-regular fa-clipboard"></i> &nbsp; Assignment
-                    </a>
+    <!-- Navbar pills -->
+    <div class="row">
+        <div class="col-md-12">
+            <ul class="nav nav-pills flex-column flex-sm-row mb-4">
+                <li class="nav-item">
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/profile}"><i class="ti-xs ti ti-user-check me-1"></i> Profile</a>
                 </li>
-                <li>
-                    <a href="" class="dropdown-item d-flex align-items-center">
-                        <i class="fa-solid fa-clipboard"></i> &nbsp; Quiz Assignment
-                    </a>
+                <li class="nav-item">
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/mapel}"><i class="ti-xs ti ti-users me-1"></i> Mapel</a>
                 </li>
-                <li>
-                    <a href="#" class="dropdown-item d-flex align-items-center">
-                        <i class="fa-solid fa-clipboard-question"></i> &nbsp; Quiz
-                    </a>
+                <li class="nav-item">
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Course</a>
                 </li>
-                <li>
-                    <a href="#" class="dropdown-item d-flex align-items-center">
-                        <i class="fa-solid fa-book-bookmark"></i> &nbsp; Material
-                    </a>
+                <li class="nav-item">
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/siswa}"><i class="ti-xs ti ti-link me-1"></i> Siswa</a>
                 </li>
-                <li>
-                    <a href="#" class="dropdown-item d-flex align-items-center">
-                        <i class="fa-solid fa-repeat"></i> &nbsp; Reuse Post
-                    </a>
-                </li>
-                <li>
-                    <a id="btn-add" th:href="@{~/classroom/topic/add}" class="dropdown-item d-flex align-items-center">
-                        <i class="fa-solid fa-table-list"></i> &nbsp; Topic
-                    </a>
+                <li class="nav-item">
+                    <div class="btn-group" id="dropdown-icon">
+                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="ti ti-plus"></i> &nbsp; Create
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#" class="dropdown-item d-flex align-content-lg-between">
+                                    <i class="fa-regular fa-clipboard"></i> &nbsp; Assignment
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" class="dropdown-item d-flex align-items-center">
+                                    <i class="fa-solid fa-clipboard"></i> &nbsp; Quiz Assignment
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown-item d-flex align-items-center">
+                                    <i class="fa-solid fa-clipboard-question"></i> &nbsp; Quiz
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown-item d-flex align-items-center">
+                                    <i class="fa-solid fa-book-bookmark"></i> &nbsp; Material
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="dropdown-item d-flex align-items-center">
+                                    <i class="fa-solid fa-repeat"></i> &nbsp; Reuse Post
+                                </a>
+                            </li>
+                            <li>
+                                <a id="btn-topic-add" th:href="@{~/classroom/topic/add}" class="dropdown-item d-flex align-items-center">
+                                    <i class="fa-solid fa-table-list"></i> &nbsp; Topic
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </li>
             </ul>
         </div>
     </div>
-    <!-- url link -->
-    <nav class="navbar navbar-example navbar-expand-lg bg-white" style="z-index: 20">
-        <div class="container-fluid">
-            <div class="nav-align-left ">
-                <a class="navbar-brand" href="#">Stream</a>
-                <a class="navbar-brand" href="#">Classwork</a>
-                <a class="navbar-brand" href="#">People</a>
-                <a class="navbar-brand" href="#">Grades</a>
-            </div>
-        </div>
-    </nav>
+    <!--/ Navbar pills -->
+
     <input type="hidden" id="classroom-item-url" th:href="@{~/classroom/items}">
     <div class="app-academy">
         <div class="card mb-4">
             <div class="card-header d-flex flex-wrap justify-content-between gap-3">
                 <div class="card-title mb-0 me-1">
                     <h5 class="card-title mb-1" id="level-title">My Courses</h5>
-                    <p class="text-muted mb-0">Total 6 course you have purchased</p>
-
-                </div>
-                <div class="d-flex justify-content-md-end align-items-center gap-3 flex-wrap">
-                    <select id="select2_course_select" class="select2 form-select" data-placeholder="All Courses">
-                        <option value="">All Courses</option>
-                        <option value="ui/ux">UI/UX</option>
-                        <option value="seo">SEO</option>
-                        <option value="web">Web</option>
-                        <option value="music">Music</option>
-                        <option value="painting">Painting</option>
-                    </select>
-
-                    <label class="switch">
-                        <input type="checkbox" class="switch-input" />
-                        <span class="switch-toggle-slider">
-                          <span class="switch-on"></span>
-                          <span class="switch-off"></span>
-                        </span>
-                        <span class="switch-label text-nowrap mb-0">Hide completed</span>
-                    </label>
                 </div>
             </div>
             <div class="card-body" id="classroom-content">
+
             </div>
         </div>
     </div>
