feat: fix detail

--- a/src/main/resources/templates/pages/dashboard/index.html
+++ b/src/main/resources/templates/pages/dashboard/index.html
@@ -58,16 +58,16 @@
         <div class="col-md-12">
             <ul class="nav nav-pills flex-column flex-sm-row mb-4">
                 <li class="nav-item">
-                    <a class="nav-link active dashboard-menu" th:href="@{~/dashboard/profile}"><i class="ti-xs ti ti-user-check me-1"></i> Profile</a>
+                    <a class="nav-link active dashboard-menu" th:href="@{~/dashboard/pages/profile}"><i class="ti-xs ti ti-user-check me-1"></i> Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/mapel}"><i class="ti-xs ti ti-users me-1"></i> Mapel</a>
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/pages/mapel}"><i class="ti-xs ti ti-users me-1"></i> Mapel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Course</a>
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/pages/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Course</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/siswa}"><i class="ti-xs ti ti-link me-1"></i> Siswa</a>
+                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/pages/siswa}"><i class="ti-xs ti ti-link me-1"></i> Siswa</a>
                 </li>
             </ul>
         </div>
