--- a/src/main/resources/templates/pages/classroom/index.html
+++ b/src/main/resources/templates/pages/classroom/index.html
@@ -19,51 +19,19 @@
         <div class="col-md-12">
             <ul class="nav nav-pills flex-column flex-sm-row mb-4">
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/profile}"><i class="ti-xs ti ti-user-check me-1"></i> Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/mapel}"><i class="ti-xs ti ti-users me-1"></i> Mapel</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Course</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/dashboard/siswa}"><i class="ti-xs ti ti-link me-1"></i> Siswa</a>
-                </li>
-                <li class="nav-item">
                     <div class="btn-group" id="dropdown-icon">
-                        <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="ti ti-plus"></i> &nbsp; Create
                         </button>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#" class="dropdown-item d-flex align-content-lg-between">
-                                    <i class="fa-regular fa-clipboard"></i> &nbsp; Assignment
+                                <a th:href="@{~/classroom/new}" id="btn-classroom-new" class="dropdown-item d-flex align-content-lg-between">
+                                    <i class="fa-regular fa-clipboard"></i> &nbsp; Classroom
                                 </a>
                             </li>
                             <li>
                                 <a href="" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-clipboard"></i> &nbsp; Quiz Assignment
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-clipboard-question"></i> &nbsp; Quiz
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-book-bookmark"></i> &nbsp; Material
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-repeat"></i> &nbsp; Reuse Post
-                                </a>
-                            </li>
-                            <li>
-                                <a id="btn-topic-add" th:href="@{~/classroom/topic/add}" class="dropdown-item d-flex align-items-center">
-                                    <i class="fa-solid fa-table-list"></i> &nbsp; Topic
+                                    <i class="fa-solid fa-clipboard"></i> &nbsp; Join Class
                                 </a>
                             </li>
                         </ul>
