feat: fix add people

--- a/src/main/resources/templates/pages/classroom/detail.html
+++ b/src/main/resources/templates/pages/classroom/detail.html
@@ -20,16 +20,16 @@
         <div class="col-md-12">
             <ul class="nav nav-pills flex-column flex-sm-row mb-4">
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/classroom/pages/stream}"><i class="ti-xs ti ti-user-check me-1"></i> Steam</a>
+                    <a class="nav-link" th:href="@{~/classroom/pages/stream}"><i class="ti-xs ti ti-user-check me-1"></i> Steam</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/classroom/pages/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
+                    <a class="nav-link" id="btn-page-course"  th:href="@{~/classroom/pages/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
                 </li>
                 <li class="nav-item">
-                    <a id="btn-people-add" class="nav-link dashboard-menu" th:href="@{~/classroom/people/add}"><i class="ti-xs ti ti-users me-1"></i> People</a>
+                    <a class="nav-link" id="btn-people-add"  th:href="@{~/classroom/people/add}"><i class="ti-xs ti ti-users me-1"></i> People</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dashboard-menu" th:href="@{~/classroom/pages/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
+                    <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/pages/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
                 </li>
                 <li class="nav-item">
                     <!-- Button New -->
