--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -107,7 +107,7 @@
 
 <!-- Ekxtra large modal --->
 <div class="modal fade" id="main-modal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-simple modal-enable-otp modal-dialog-centered" role="document">
     <div class="modal-content">
     </div>
   </div>
