--- a/src/main/resources/templates/pages/classroom/detail.html
+++ b/src/main/resources/templates/pages/classroom/detail.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" id="btn-page-course"  th:href="@{~/classroom/pages/course}"><i class="ti-xs ti ti-layout-grid me-1"></i> Classwork</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="btn-people-add"  th:href="@{~/classroom/people/add}"><i class="ti-xs ti ti-users me-1"></i> People</a>
+                    <a class="nav-link" id="btn-people"  th:href="@{~/classroom/people}"><i class="ti-xs ti ti-users me-1"></i> People</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="btn-page-grade" th:href="@{~/classroom/pages/grades}"><i class="ti-xs ti ti-link me-1"></i> Grades</a>
