--- a/src/main/resources/templates/pages/classroom/_people-student.html
+++ b/src/main/resources/templates/pages/classroom/_people-student.html
@@ -1,38 +1,17 @@
 <form xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html"
-      th:id="form-people" th:action="@{~/people/save}"
+      th:id="form-people-student" th:action="@{~/people-student/save}"
       th:method="post">
-        <div class="modal-body p-3 p-md-3">
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            <div class="text-center">
-                <h3 class="mb-2">Member Class</h3>
-                <p>Daily Tasks</p>
+    <div class="modal-body">
+        <h5 class="modal-title" >
+            <i class="fa-regular fa-user"></i>
+            &nbsp; Invite Student</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="row">
+            <div class="col ms-auto mb-5">
+                <label for="email" class="form-label"></label>
+                <input type="text" id="email" name="email" class="form-control" placeholder="Type name or email">
             </div>
         </div>
-        <div class="mb-4 pb-2">
-            <label for="select2Basic" class="form-label">Add Members</label>
-            <select
-                    id="select2Basic"
-                    class="form-select form-select-lg share-project-select"
-                    data-allow-clear="true">
-                <option data-name="Adelaide Nichols" th:src="@{~/img/avatars/13.png}"  selected>
-                    Adelaide Nichols
-                </option>
-                <option data-name="Julian Murphy" th:src="@{~/img/avatars/9.png}">Julian Murphy</option>
-                <option data-name="Sophie Gilbert" th:src="@{~/img/avatars/10.png}">Sophie Gilbert</option>
-                <option data-name="Marvin Wheeler" th:src="@{~/img/avatars/7.png}">Marvin Wheeler</option>
-            </select>
-        </div>
-
-        <div class="d-flex align-items-start mb-5 align-items-sm-center">
-            <div class="d-flex justify-content-between flex-grow-1 align-items-center flex-wrap gap-2">
-                <h4 class="mb-0">8 Member</h4>
-                <a href="#" class="btn btn-outline-primary">Invite Student &nbsp;
-                    <i class="ti ti-user-plus">
-                    </i>
-                </a>
-            </div>
-        </div>
-
         <ul class="p-0 m-0">
             <li class="d-flex flex-wrap mb-3">
                 <div class="avatar me-3">
@@ -53,16 +32,16 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
+                                <a class="dropdown-item" href="#">Owner</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
+                                <a class="dropdown-item" href="#">Can Edit</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
+                                <a class="dropdown-item" href="#">Can Comment</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
+                                <a class="dropdown-item" href="#">Can View</a>
                             </li>
                         </ul>
                     </div>
@@ -87,16 +66,16 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
+                                <a class="dropdown-item" href="#">Owner</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
+                                <a class="dropdown-item" href="#">Can Edit</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
+                                <a class="dropdown-item" href="#">Can Comment</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
+                                <a class="dropdown-item" href="#">Can View</a>
                             </li>
                         </ul>
                     </div>
@@ -121,16 +100,16 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
+                                <a class="dropdown-item" href="#">Owner</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
+                                <a class="dropdown-item" href="#">Can Edit</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
+                                <a class="dropdown-item" href="#">Can Comment</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
+                                <a class="dropdown-item" href="#">Can View</a>
                             </li>
                         </ul>
                     </div>
@@ -155,16 +134,16 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
+                                <a class="dropdown-item" href="#">Owner</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
+                                <a class="dropdown-item" href="#">Can Edit</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
+                                <a class="dropdown-item" href="#">Can Comment</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
+                                <a class="dropdown-item" href="#">Can View</a>
                             </li>
                         </ul>
                     </div>
@@ -189,16 +168,16 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
+                                <a class="dropdown-item" href="#">Owner</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
+                                <a class="dropdown-item" href="#">Can Edit</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
+                                <a class="dropdown-item" href="#">Can Comment</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
+                                <a class="dropdown-item" href="#">Can View</a>
                             </li>
                         </ul>
                     </div>
@@ -223,88 +202,29 @@
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
+                                <a class="dropdown-item" href="#">Owner</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
+                                <a class="dropdown-item" href="#">Can Edit</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
+                                <a class="dropdown-item" href="#">Can Comment</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </li>
-            <li class="d-flex flex-wrap mb-3">
-                <div class="avatar me-3">
-                    <img th:src="@{~/img/avatars/7.png}" alt="avatar" class="rounded-circle" />
-                </div>
-                <div class="d-flex justify-content-between flex-grow-1">
-                    <div class="me-2">
-                        <p class="mb-0">Chris Watkins</p>
-                        <p class="mb-0 text-muted">zokap@mak.org</p>
-                    </div>
-                    <div class="dropdown">
-                        <button
-                                type="button"
-                                class="btn dropdown-toggle p-2"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                            <span class="text-muted fw-normal me-2 d-none d-sm-inline-block">Can Comment</span>
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </li>
-            <li class="d-flex flex-wrap">
-                <div class="avatar me-3">
-                    <img th:src="@{~/img/avatars/8.png}" alt="avatar" class="rounded-circle" />
-                </div>
-                <div class="d-flex justify-content-between flex-grow-1">
-                    <div class="me-2">
-                        <p class="mb-0">Adelaide Nichols</p>
-                        <p class="mb-0 text-muted">ujinomu@jigo.com</p>
-                    </div>
-                    <div class="dropdown">
-                        <button
-                                type="button"
-                                class="btn dropdown-toggle p-2"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                            <span class="text-muted fw-normal me-2 d-none d-sm-inline-block">Can Edit</span>
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Owner</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Edit</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can Comment</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="javascript:void(0);">Can View</a>
+                                <a class="dropdown-item" href="#">Can View</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </li>
         </ul>
+    </div>
+    <div class="modal-footer input-group ">
+        <button type="submit" class="btn btn-outline-primary">
+            Invite
+        </button>
+        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
+            Close
+        </button>
+    </div>
 </form>
