--- a/src/main/resources/templates/pages/classroom/_page-material.html
+++ b/src/main/resources/templates/pages/classroom/_page-material.html
@@ -1,4 +1,5 @@
 <form xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html"
+      data-assets-path="../../static/"
       th:id="form-material" th:action="@{~/material/save}"
       th:method="post">
     <div class="modal-body mb-0">
@@ -33,15 +34,37 @@
             <div class="card mb-2">
                 <div class="card-body">
                     <form>
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" placeholder="Title"
-                                   aria-describedby="floatingInputHelp" />
-                            <label>Title</label>
-                            <div class="form-text">
-                            </div>
+                        <div id="snow-toolbar">
+                            <span class="ql-formats">
+                              <select class="ql-font"></select>
+                              <select class="ql-size"></select>
+                            </span>
+                            <span class="ql-formats">
+                              <button class="ql-bold"></button>
+                              <button class="ql-italic"></button>
+                              <button class="ql-underline"></button>
+                              <button class="ql-strike"></button>
+                            </span>
+                            <span class="ql-formats">
+                              <select class="ql-color"></select>
+                              <select class="ql-background"></select>
+                            </span>
+                            <span class="ql-formats">
+                              <button class="ql-script" value="sub"></button>
+                              <button class="ql-script" value="super"></button>
+                            </span>
+                            <span class="ql-formats">
+                              <button class="ql-header" value="1"></button>
+                              <button class="ql-header" value="2"></button>
+                              <button class="ql-blockquote"></button>
+                              <button class="ql-code-block"></button>
+                            </span>
                         </div>
-                        <div>
-                            <textarea class="form-control" placeholder="Description (optional)" rows="6"></textarea>
+                        <div id="snow-editor">
+                            <h6>Title</h6>
+                            <p>
+                                Description (Optional)
+                            </p>
                         </div>
                     </form>
                 </div>
@@ -50,30 +73,103 @@
     </div>
 
     <!-- Attach -->
-    <div class="modal-body">
-        <div class="col-xl">
-            <div class="card mb-0">
-                <div class="card-body">
-                    <h6>Attach</h6>
-                    <div class="text-center">
-                        <button type="button" class="btn btn-icon rounded-circle">
-                            <i class="ti ti-brand-google-drive ti-sm"></i>
-                        </button>
-                        <button type="button" class="btn btn-icon rounded-circle">
-                            <i class="ti ti-brand-youtube ti-sm"></i>
-                        </button>
-                        <button type="button" class="btn btn-icon rounded-circle">
-                            <i class="ti ti-plus ti-sm"></i>
-                        </button>
-                        <button type="button" class="btn btn-icon rounded-circle">
-                            <i class="ti ti-upload ti-sm"></i>
-                        </button>
-                        <button type="button" class="btn btn-icon rounded-circle">
-                            <i class="ti ti-link ti-sm"></i>
-                        </button>
-                    </div>
+        <div class="card mb-0">
+            <div class="card-body">
+                <h6>Attach</h6>
+                <div class="text-center">
+                    <button type="button" class="btn btn-icon rounded-circle">
+                        <i class="ti ti-brand-google-drive ti-sm"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon rounded-circle">
+                        <i class="ti ti-brand-youtube ti-sm"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon rounded-circle">
+                        <i class="ti ti-plus ti-sm"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon rounded-circle">
+                        <i class="ti ti-upload ti-sm"></i>
+                    </button>
+                    <button type="button" class="btn btn-icon rounded-circle">
+                        <i class="ti ti-link ti-sm"></i>
+                    </button>
                 </div>
             </div>
         </div>
-    </div>
 </form>
+<script>
+    $(function (){
+        const snowEditor = new Quill('#snow-editor', {
+            bounds: '#snow-editor',
+            modules: {
+                formula: true,
+                toolbar: '#snow-toolbar'
+            },
+            theme: 'snow'
+        });
+
+        // Full Toolbar
+        const fullToolbar = [
+            [
+                {
+                    font: []
+                },
+                {
+                    size: []
+                }
+            ],
+            ['bold', 'italic', 'underline', 'strike'],
+            [
+                {
+                    color: []
+                },
+                {
+                    background: []
+                }
+            ],
+            [
+                {
+                    script: 'super'
+                },
+                {
+                    script: 'sub'
+                }
+            ],
+            [
+                {
+                    header: '1'
+                },
+                {
+                    header: '2'
+                },
+                'blockquote',
+                'code-block'
+            ],
+            [
+                {
+                    list: 'ordered'
+                },
+                {
+                    list: 'bullet'
+                },
+                {
+                    indent: '-1'
+                },
+                {
+                    indent: '+1'
+                }
+            ],
+            [{ direction: 'rtl' }],
+            ['link', 'image', 'video', 'formula'],
+            ['clean']
+        ];
+        const fullEditor = new Quill('#full-editor', {
+            bounds: '#full-editor',
+            placeholder: 'Type Something...',
+            modules: {
+                formula: true,
+                toolbar: fullToolbar
+            },
+            theme: 'snow'
+        });
+    });
+</script>
