--- a/src/main/resources/profiles/local/templates/pages/classroom/_people-student-add.html
+++ b/src/main/resources/profiles/local/templates/pages/classroom/_people-student-add.html
@@ -1,15 +1,16 @@
 <form xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html"
-      th:id="form-people-student" th:action="@{~/people-student/save}"
+      th:id="form-people-student" th:action="@{~/classroom/people-student/save}"
       th:method="post" th:object="${student}">
     <div class="modal-body">
         <h5 class="modal-title" >
             <i class="fa-regular fa-user"></i>
             &nbsp; Invite Student</h5>
+        <input type="hidden" th:field="*{courseId}">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         <div class="row">
             <div class="col ms-auto mb-2">
-                <label for="studentList" class="form-label"></label>
-                <select id="studentList" name="studentList" class="form-control" th:value="${student.siswaId}" data-allow-clear="true">
+                <label for="siswaId" class="form-label"></label>
+                <select id="siswaId" name="siswaId" class="form-control" th:field="*{siswaId}" data-allow-clear="true">
                     <option value="">Please Select a Student . . .</option>
                     <option th:each="item : ${studentList}" th:value="${item.id}" th:text="${item.nama}" th:selected="${item.id == student.siswaId}">
                     </option>
